--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Core numerical & data handling
 pandas==2.2.2
 numpy==1.26.4
-
+scikit-learn>=1.4
+streamlit==1.39.0
+requests>=2.31
 # Deep learning backbone
 torch==2.3.1
 
