--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,1 @@
-# Core numerical & data handling
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn>=1.4
-streamlit==1.39.0
-requests>=2.31
-# Deep learning backbone
-torch==2.3.1
-
-# NLP / embeddings
-transformers==4.44.2
-sentence-transformers==3.0.1
-
-# Vector similarity search
-faiss-cpu==1.8.0.post1
-
-# Optional: cleaner regex operations (standard `re` works too)
-regex==2024.5.15
+streamlit
